GNOME Bugzilla – Bug 748733
Disabling the right margin setting isn't honored
Last modified: 2015-05-08 03:41:22 UTC
The option to disable the right margin is at this moment seemingly tied to the individual settings for each language. However this has problem, unchecking the box in the language settings in the normal preferences dialog doesn't stop it from being enabled by default when creating or opening a file of that type. It can still be disabled in the language popover but I believe that only affects the individual file.
Is it possible you are also using "editorconfig" too? Currently, we have this deficiency that if editorconfig settings are used, the gsettings based language settings (which are configured in the preferences window) will not be honored.
I'm almost 100% sure I am not. I haven't got any editorconfig packages on my system and file searches failed to find any .editorconfig files anywhere within my home directory, my current lot of projects being in a subdir.
Created attachment 302819 [details] [review] Support for show-right-margin setting in IdeFileSettings
Review of attachment 302819 [details] [review]: LGTM
Added a followup commit to set 'show-right-margin' for editorconfig if 'right-margin-position' is set.
I built a version from git about a day ago and can confirm that the bug seems to be fixed. I am now also scouring my home dir for editorconfig. Thanks for the work