libide: Add support for show-right-margin setting in ide-file-settings

https://bugzilla.gnome.org/show_bug.cgi?id=748733